# eu-electricity-forecasting

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/raw/energinet/DK_1/: day_ahead_prices.parquet  load_forecast.parquet  production_exchange.parquet  wind_solar_forecast.parquet
data/raw/entsoe/AT/: load_forecast.parquet  (+2 more)
notebooks/: 00_data_overview.ipynb  01_market_structure.ipynb  02_data_sources.ipynb  03_price_exploration.ipynb  04_wind_solar_prices.ipynb  05_data_quality.ipynb  06_cross_border_flows.ipynb  07_feature_engineering.ipynb  08_xgboost_forecasting.ipynb  09_backtesting.ipynb
output/: backtest_summary.json  earnings_summary.csv  imputation_audit.csv  model_performance_history.csv  zone_metrics.csv
scripts/: fast_backtest.py  fetch_energinet_data.py  fetch_entsoe_data.py  fetch_weather_data.py  generate_earnings_map.py  generate_eu_heatmap.py  import_entsoe_csv.py  run_pipeline.py
src/da_forecast/: __init__.py  config.py  data.py
src/da_forecast/backtest/: __init__.py  engine.py  metrics.py  strategies.py
src/da_forecast/features/: __init__.py  build.py  calendar.py  fundamental.py  lags.py  weather.py
src/da_forecast/models/: __init__.py  evaluation.py  xgboost_da.py
src/da_forecast/monitoring/: drift.py
src/da_forecast/sources/: __init__.py  cache.py  energinet.py  entsoe.py  openmeteo.py
src/da_forecast/validation/: __init__.py  completeness.py  outliers.py  schema.py  timezone.py
tests/: conftest.py  test_backtest.py  test_cache.py  test_features.py  test_models.py  test_validation.py
(+70 files in other folders)
